--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,9 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
   }
