--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,5 +10,6 @@ anyhow = "1.0.69"
 async-graphql = "5.0.6"
 async-graphql-rocket = "5.0.6"
 rocket = "0.5.0-rc.2"
+rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
 sqlx = {version="0.6.2", features=["runtime-tokio-rustls", "any", "sqlite"]}
 thiserror = "1.0.38"
