--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5",
     "typescript": "^4.9.5",
     "urql": "^3.0.3"
   },
