--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "dayjs": "^1.11.7",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "graphql": "^16.6.0",
