--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "graphql": "^16.6.0",
+    "graphql-request": "5.1.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "3.2.1",
     "@graphql-codegen/client-preset": "2.1.0",
+    "@graphql-codegen/typescript": "^3.0.2",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.8",
+    "@graphql-codegen/typescript-operations": "^3.0.2",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.21",
