--- a/web/package.json
+++ b/web/package.json
@@ -23,8 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
-    "typescript": "^4.9.5",
-    "urql": "^3.0.3"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.2.1",
