--- a/web/package.json
+++ b/web/package.json
@@ -17,12 +17,14 @@
     "dayjs": "^1.11.7",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "github-markdown-css": "^5.2.0",
     "graphql": "^16.6.0",
     "graphql-request": "5.1.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
