--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       POSTGRES_DB: blog
       BLOG_USER: blog
       BLOG_PASSWORD: p@ssw0ord
+    ports:
+      - 5432:5432
 
 volumes:
   pgdata:
