--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -12,6 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: LGTM
-        uses: Doarakko/action-lgtmoon/@v1.4
+        uses: Doarakko/action-lgtmoon@v1.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
