--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -13,5 +13,7 @@ jobs:
     steps:
       - name: LGTM
         uses: Doarakko/action-lgtmoon@v1.4
+        if: >-
+          contains(github.event.comment.body, 'lgtm') || contains(github.event.review.body, 'lgtm')
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
