uses fixed-branch

--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: LGTM
-        uses: sntkn/action-lgtmoon@main
+        uses: sntkn/action-lgtmoon@fix/pr-review-comment
         if: >-
           contains(github.event.comment.body, 'lgtm') || contains(github.event.review.body, 'lgtm')
         with:
