--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -12,6 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: LGTM
-        uses: sntkn/action-lgtmoon@fix/pr-review-comment
+        uses: Doarakko/action-lgtmoon@v1.5
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
